--- a/Read/ReadAndroidWiki/14.Jetpack/06.Lifecycle学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/06.Lifecycle学习.md
@@ -15,6 +15,11 @@
 - 05.原理探索分析
     - 5.1 整体架构图
     - 5.2 
+- 06.Lifecycle设计原理
+    - 6.1 addObserver调用分析
+    - 6.2 思考如何实现生命周期监听
+    - 6.3 ReportFragment类分析
+    - 6.4 ComponentActivity类分析
 - 07.一些疑惑点和思考
     - 7.1 复用LifecycleRegistry
     - 7.2 注解和DefaultLifecycleObserver的取舍
@@ -22,10 +27,6 @@
 
 
 
-- 04.如何实现生命周期感知
-- 05.注解方法如何被调用
-- 06.addObserver调用分析
-- 07.知识点梳理和总结一下
 
 
 ### 01.Lifecycle介绍
@@ -125,6 +126,7 @@
     2020-03-06 09:44:14.266 11647-11647/com.ycbjie.yclivedatabus D/BusLogUtils: ------AppCompatActivity onDestroy() called
     ```
 
+
 ### 04.开发中的代码演进
 #### 4.1 之前MVP遇到问题
 - 在处理Activity或者Fragment组件的生命周期相关时，不可避免会遇到这样的问题：
@@ -157,6 +159,7 @@
         }
     }
     ```
+
 
 #### 4.2 引入Lifecycle
 - Lifecycle，它持有关于组件（如 Activity 或 Fragment）生命周期状态的信息，并且允许其他对象观察此状态。
@@ -219,95 +222,192 @@
         - **Event(当前生命周期改变对应的事件)**：当Lifecycle发生改变，如进入onCreate,会自动发出ON_CREATE事件。
 
 
-### 07.一些疑惑点和思考
-#### 7.1 复用LifecycleRegistry
-
-
-#### 7.2 注解和DefaultLifecycleObserver的取舍
-- Google的Lifecycle库中提供了一个 **DefaultLifecycleObserver** 类,方便我们直接实现LifecycleObserver接口。
-- 相比较于文中demo所使用的注解方式，Google官方更推荐我们使用 **DefaultLifecycleObserver** 类，并声明：一旦Java 8成为Android的主流，注释将被弃用，所以介于DefaultLifecycleObserver和注解两者之间,更推荐使用 **DefaultLifecycleObserver** 。
-
-
-#### 7.3 Lifecycles最佳实践
-- 保持 UI 控制器（Activity 和 Fragment）尽可能的精简。它们不应该试图去获取它们所需的数据；相反，要用 ViewModel来获取，并且观察 LiveData将数据变化反映到视图中。
-- 尝试编写数据驱动（data-driven）的 UI，即 UI 控制器的责任是在数据改变时更新视图或者将用户的操作通知给 ViewModel。
-- 将数据逻辑放到 ViewModel 类中。ViewModel 应该作为 UI 控制器和应用程序其它部分的连接服务。注意：不是由 ViewModel 负责获取数据（例如：从网络获取）。相反，ViewModel 调用相应的组件获取数据，然后将数据获取结果提供给 UI 控制器。
-- 使用Data Binding来保持视图和 UI 控制器之间的接口干净。这样可以让视图更具声明性，并且尽可能减少在 Activity 和 Fragment 中编写更新代码。如果你喜欢在 Java 中执行该操作，请使用像Butter Knife 这样的库来避免使用样板代码并进行更好的抽象化。
-- 如果 UI 很复杂，可以考虑创建一个 Presenter 类来处理 UI 的修改。虽然通常这样做不是必要的，但可能会让 UI 更容易测试。
-- 不要在 ViewModel 中引用View或者 Activity的 context。因为如果ViewModel存活的比 Activity 时间长（在配置更改的情况下），Activity 将会被泄漏并且无法被正确的回收。
-
-
-
-### 04.如何实现生命周期感知
-- 看到上面的简单案例，可以发现使用了注解@OnLifecycleEvent(Lifecycle.Event.ON_CREATE)标注的方法，既可以执行生命周期的监听。
-- 那么追踪到Lifecycle.Event类，看看还有哪里使用到了该注解，截图如下所示，这里我们就先看一下ReportFragment类，看上去应该跟Fragment有关系！
-    - ![image](https://img-blog.csdnimg.cn/20200306100141148.jpg)
-
-
-
-#### 4.1 生命周期事件与状态
-- 上面案例中使用到了注解，那么它究竟有那些状态呢？
-    - Lifecycle是一个抽象类，里面主要有两个功能，一个是Event生命周期，一个是State状态。
-    - Lifecycle.Event表示生命周期的状态，与 Activity 生命周期类似。
-    - Lifecycle.State表示当前组件的生命周期状态，
+### 06.Lifecycle设计原理
+#### 6.1 addObserver调用分析
+- 看一下Lifecycle中addObserver方法，发现它是一个抽象方法，那么就去找它的实现类，这里先来看一下LifecycleRegistry类中的addObserver方法实现代码
     ```
-    public abstract class Lifecycle {
-        @MainThread
-        public abstract void addObserver(@NonNull LifecycleObserver observer);
-        @MainThread
-        public abstract void removeObserver(@NonNull LifecycleObserver observer);
-        @MainThread
-        @NonNull
-        public abstract State getCurrentState();
+    @Override
+    public void addObserver(@NonNull LifecycleObserver observer) {
+        State initialState = mState == DESTROYED ? DESTROYED : INITIALIZED;
+        //构造ObserverWithState
+        ObserverWithState statefulObserver = new ObserverWithState(observer, initialState);
+        //将observer对象和statefulObserver对象添加到FastSafeIterableMap数据结构中
+        ObserverWithState previous = mObserverMap.putIfAbsent(observer, statefulObserver);
     
-        @SuppressWarnings("WeakerAccess")
-        public enum Event {
-            ON_CREATE,
-            ON_START,
-            ON_RESUME,
-            ON_PAUSE,
-            ON_STOP,
-            ON_DESTROY,
-            ON_ANY
+        if (previous != null) {
+            return;
         }
-        @SuppressWarnings("WeakerAccess")
-        public enum State {
-            DESTROYED,
-            INITIALIZED,
-            CREATED,
-            STARTED,
-            RESUMED;
-            public boolean isAtLeast(@NonNull State state) {
-                return compareTo(state) >= 0;
+        LifecycleOwner lifecycleOwner = mLifecycleOwner.get();
+        if (lifecycleOwner == null) {
+            // 它是null，我们应该被摧毁。快速回退
+            return;
+        }
+    
+        boolean isReentrance = mAddingObserverCounter != 0 || mHandlingEvent;
+        State targetState = calculateTargetState(observer);
+        mAddingObserverCounter++;
+        while ((statefulObserver.mState.compareTo(targetState) < 0
+                && mObserverMap.contains(observer))) {
+            pushParentState(statefulObserver.mState);
+            statefulObserver.dispatchEvent(lifecycleOwner, upEvent(statefulObserver.mState));
+            popParentState();
+            // mState / subling may have been changed recalculate
+            targetState = calculateTargetState(observer);
+        }
+    
+        if (!isReentrance) {
+            // we do sync only on the top level.
+            sync();
+        }
+        mAddingObserverCounter--;
+    }
+    ```
+- 然后看一下ObserverWithState类，追溯代码到Lifecycling.getCallback(observer)，看看里面做了什么
+    ```
+    static class ObserverWithState {
+        State mState;
+        GenericLifecycleObserver mLifecycleObserver;
+    
+        ObserverWithState(LifecycleObserver observer, State initialState) {
+            mLifecycleObserver = Lifecycling.getCallback(observer);
+            mState = initialState;
+        }
+    
+        void dispatchEvent(LifecycleOwner owner, Event event) {
+            State newState = getStateAfter(event);
+            mState = min(mState, newState);
+            mLifecycleObserver.onStateChanged(owner, event);
+            mState = newState;
+        }
+    }
+    ```
+- 接着来看看Lifecycling类中getCallback方法
+    - 判断该Observer是否是GenericLifecycleObserver，是的话返回本身；如果是FullLifecycleObserver，则直接创建一个FullLifecycleObserverAdapter对象
+    - 判断是否包含注解处理器 查找是否包含“类名__LifecycleAdapter”的类 包含并且有OnLifecycleEvent注解则返回SingleGeneratedAdapterObserver/CompositeGeneratedAdaptersObserver
+    - 如果以上提交都不满足就通过反射调用回调方法
+    ```
+    @NonNull
+    static GenericLifecycleObserver getCallback(Object object) {
+        if (object instanceof FullLifecycleObserver) {
+            return new FullLifecycleObserverAdapter((FullLifecycleObserver) object);
+        }
+    
+        if (object instanceof GenericLifecycleObserver) {
+            return (GenericLifecycleObserver) object;
+        }
+        
+        //获取传入对象object的Class对象
+        final Class<?> klass = object.getClass();
+        //获取类型是否包含注解处理器
+        int type = getObserverConstructorType(klass);
+        if (type == GENERATED_CALLBACK) {
+            ////这里是包含注解处理器 返回SingleGeneratedAdapterObserver 或者CompositeGeneratedAdaptersObserver
+            List<Constructor<? extends GeneratedAdapter>> constructors =
+                    sClassToAdapters.get(klass);
+            if (constructors.size() == 1) {
+                GeneratedAdapter generatedAdapter = createGeneratedAdapter(
+                        constructors.get(0), object);
+                return new SingleGeneratedAdapterObserver(generatedAdapter);
+            }
+            GeneratedAdapter[] adapters = new GeneratedAdapter[constructors.size()];
+            for (int i = 0; i < constructors.size(); i++) {
+                adapters[i] = createGeneratedAdapter(constructors.get(i), object);
+            }
+            return new CompositeGeneratedAdaptersObserver(adapters);
+        }
+        ///通过反射调用方法
+        return new ReflectiveGenericLifecycleObserver(object);
+    }
+    ```
+- 然后查看一下SingleGeneratedAdapterObserver类
+    - 通过ObserverWithState#dispatchEvent方法最后调用的实际是SingleGeneratedAdapterObserver里面的onStateChanged方法
+    - 在SingleGeneratedAdapterObserver里面调用了Adapter的callMethods方法 
+    - 这个是
+    ```
+    @RestrictTo(RestrictTo.Scope.LIBRARY_GROUP)
+    public class SingleGeneratedAdapterObserver implements GenericLifecycleObserver {
+    
+        private final GeneratedAdapter mGeneratedAdapter;
+    
+        SingleGeneratedAdapterObserver(GeneratedAdapter generatedAdapter) {
+            mGeneratedAdapter = generatedAdapter;
+        }
+    
+        @Override
+        public void onStateChanged(LifecycleOwner source, Lifecycle.Event event) {
+            mGeneratedAdapter.callMethods(source, event, false, null);
+            mGeneratedAdapter.callMethods(source, event, true, null);
+        }
+    }
+    ```
+- 然后看一下CompositeGeneratedAdaptersObserver类
+    - 通过ObserverWithState#dispatchEvent方法最后调用的实际是CompositeGeneratedAdaptersObserver里面的onStateChanged方法
+    - 在CompositeGeneratedAdaptersObserver里面遍历mGeneratedAdapters，然后也是调用callMethods方法
+    ```
+    @RestrictTo(RestrictTo.Scope.LIBRARY_GROUP)
+    public class CompositeGeneratedAdaptersObserver implements GenericLifecycleObserver {
+    
+        private final GeneratedAdapter[] mGeneratedAdapters;
+    
+        CompositeGeneratedAdaptersObserver(GeneratedAdapter[] generatedAdapters) {
+            mGeneratedAdapters = generatedAdapters;
+        }
+    
+        @Override
+        public void onStateChanged(LifecycleOwner source, Lifecycle.Event event) {
+            MethodCallsLogger logger = new MethodCallsLogger();
+            for (GeneratedAdapter mGenerated: mGeneratedAdapters) {
+                mGenerated.callMethods(source, event, false, logger);
+            }
+            for (GeneratedAdapter mGenerated: mGeneratedAdapters) {
+                mGenerated.callMethods(source, event, true, logger);
             }
         }
     }
     ```
+- 最后看一下ReflectiveGenericLifecycleObserver类的代码
+    - 反射调用回调函数，不过这里听过class对象，从ClassesInfoCache获取info信息。先从map里拿，拿不到通过createInfo函数扫描类里面的方法。具体分析可以看源码……
+    ```
+    class ReflectiveGenericLifecycleObserver implements GenericLifecycleObserver {
+        private final Object mWrapped;
+        private final CallbackInfo mInfo;
+    
+        ReflectiveGenericLifecycleObserver(Object wrapped) {
+            mWrapped = wrapped;
+            mInfo = ClassesInfoCache.sInstance.getInfo(mWrapped.getClass());
+        }
+    
+        @Override
+        public void onStateChanged(LifecycleOwner source, Event event) {
+            mInfo.invokeCallbacks(source, event, mWrapped);
+        }
+    }
+    ```
+- 当addObserver的时候最后实际传入的是一个包装好的ObserverWithState对象 然后调用onStateChanged方法来分发状态。使用处理器来提高性能，避免反射造成的性能消耗。
+
+
+
+#### 6.1 思考如何实现生命周期监听
+- 思考一下，如果让你设计，你会通过什么样形式实现Activity或者Fragment的生命周期监听？
+    - 比如
+- 看到上面案例，可以发现使用了注解@OnLifecycleEvent(Lifecycle.Event.ON_CREATE)标注的方法，既可以执行生命周期的监听。
+    - 那么追踪到Lifecycle.Event类，看看还有哪里使用到了该注解，截图如下所示，这里我们就先看一下ReportFragment类，看上去应该跟Fragment有关系！
+    - ![image](https://img-blog.csdnimg.cn/20200306100141148.jpg)
+- 那么这个Lifecycle究竟是干什么的呢？
+    - Lifecycle是一个抽象类，里面主要有两个功能，一个是Event生命周期，一个是State状态。
+    - Lifecycle.Event表示生命周期的状态，与 Activity 生命周期类似。
+    - Lifecycle.State表示当前组件的生命周期状态。
 - Event 与 State 的关系（摘自网络）
     - ![image](https://img-blog.csdnimg.cn/20200306104639153.png)
 
 
-
-#### 4.2 ReportFragment类分析
+#### 6.2 ReportFragment类分析
 - 源码如下所示，这里只是摘取了部分和生命周期有关的源代码。
     - 重写了生命周期回调的方法，可以看到生命周期方法中调用了dispatch(Lifecycle.Event.XXX)，是这个 ReportFragment 在发挥作用。
     - Lifecycle 利用了 Fragment 来实现监听生命周期，并在最终利用 dispatch 的方法来分发生命周期事件。
     - 在Fragment生命周期发生变化时调用dispatch方法来分发生命周期，在里面调用了LifecycleRegistry的handleLifecycleEvent方法。
-    ```
+    ``` java
     public class ReportFragment extends Fragment {
-    
-        //这个方法很关键，搜索一下那些地方用到了这个方法
-        public static void injectIfNeededIn(Activity activity) {
-            // ProcessLifecycleOwner should always correctly work and some activities may not extend
-            // FragmentActivity from support lib, so we use framework fragments for activities
-            android.app.FragmentManager manager = activity.getFragmentManager();
-            if (manager.findFragmentByTag(REPORT_FRAGMENT_TAG) == null) {
-                //把Fragment加入到Activity中
-                manager.beginTransaction().add(new ReportFragment(), REPORT_FRAGMENT_TAG).commit();
-                // Hopefully, we are the first to make a transaction.
-                manager.executePendingTransactions();
-            }
-        }
     
         @Override
         public void onActivityCreated(Bundle savedInstanceState) {
@@ -325,37 +425,6 @@
             dispatch(Lifecycle.Event.ON_START);
         }
     
-        @Override
-        public void onResume() {
-            super.onResume();
-            dispatchResume(mProcessListener);
-            //分发状态
-            dispatch(Lifecycle.Event.ON_RESUME);
-        }
-    
-        @Override
-        public void onPause() {
-            super.onPause();
-            //分发状态
-            dispatch(Lifecycle.Event.ON_PAUSE);
-        }
-    
-        @Override
-        public void onStop() {
-            //分发状态
-            super.onStop();
-            dispatch(Lifecycle.Event.ON_STOP);
-        }
-    
-        @Override
-        public void onDestroy() {
-            super.onDestroy();
-            //分发状态
-            dispatch(Lifecycle.Event.ON_DESTROY);
-            // just want to be sure that we won't leak reference to an activity
-            mProcessListener = null;
-        }
-        
         //分发生命周期事件
         private void dispatch(Lifecycle.Event event) {
             // 获取宿主activity
@@ -377,49 +446,9 @@
        //...
     }
     ```
-- 然后再来看一下哪里用到了这个ReportFragment类，具体追踪到LifecycleDispatcher中的DispatcherActivityCallback内部类中的onActivityCreated方法，源码如下所示
-    ```
-    class LifecycleDispatcher {
-    
-        static void init(Context context) {
-            if (sInitialized.getAndSet(true)) {
-                return;
-            }
-            ((Application) context.getApplicationContext())
-                    .registerActivityLifecycleCallbacks(new DispatcherActivityCallback());
-        }
-    
-        @SuppressWarnings("WeakerAccess")
-        @VisibleForTesting
-        static class DispatcherActivityCallback extends EmptyActivityLifecycleCallbacks {
-            private final FragmentCallback mFragmentCallback;
-    
-            DispatcherActivityCallback() {
-                mFragmentCallback = new FragmentCallback();
-            }
-    
-            @Override
-            public void onActivityCreated(Activity activity, Bundle savedInstanceState) {
-                if (activity instanceof FragmentActivity) {
-                    ((FragmentActivity) activity).getSupportFragmentManager()
-                            .registerFragmentLifecycleCallbacks(mFragmentCallback, true);
-                }
-                ReportFragment.injectIfNeededIn(activity);
-            }
-        }
-    }
-    ```
-- 接着看一下handleLifecycleEvent(event)源码代码，可以发现根据Event状态来获取State状态，然后分发状态。后续还会分析到……
-    ```
-    public void handleLifecycleEvent(@NonNull Lifecycle.Event event) {
-        State next = getStateAfter(event);
-        moveToState(next);
-    }
-    ```
 
 
-
-#### 4.3 ComponentActivity类分析
+#### 6.3 ComponentActivity类分析
 - fragment需要依赖宿主activity。通过搜索ReportFragment.injectIfNeededIn调用地方，发现 ComponentActivity 调用了该方法。（API 28 以下的版本是 SupportActivity ）
     - 内部创建了一个 LifecycleRegistry 成员对象，并且该ComponentActivity类实现了 LifecycleOwner 。
     - 在 onCreate 方法里 调用了 ReportFragment.injectIfNeededIn(this); 注入了 ReportFragment。通过getLifecycle可以获取mLifecycleRegistry对象！
@@ -454,6 +483,30 @@
     
     public abstract class Lifecycle {}
     ```
+
+
+### 07.一些疑惑点和思考
+#### 7.1 复用LifecycleRegistry
+
+
+#### 7.2 注解和DefaultLifecycleObserver的取舍
+- Google的Lifecycle库中提供了一个 **DefaultLifecycleObserver** 类,方便我们直接实现LifecycleObserver接口。
+- 相比较于文中demo所使用的注解方式，Google官方更推荐我们使用 **DefaultLifecycleObserver** 类，并声明：一旦Java 8成为Android的主流，注释将被弃用，所以介于DefaultLifecycleObserver和注解两者之间,更推荐使用 **DefaultLifecycleObserver** 。
+
+
+#### 7.3 Lifecycles最佳实践
+- 保持 UI 控制器（Activity 和 Fragment）尽可能的精简。它们不应该试图去获取它们所需的数据；相反，要用 ViewModel来获取，并且观察 LiveData将数据变化反映到视图中。
+- 尝试编写数据驱动（data-driven）的 UI，即 UI 控制器的责任是在数据改变时更新视图或者将用户的操作通知给 ViewModel。
+- 将数据逻辑放到 ViewModel 类中。ViewModel 应该作为 UI 控制器和应用程序其它部分的连接服务。注意：不是由 ViewModel 负责获取数据（例如：从网络获取）。相反，ViewModel 调用相应的组件获取数据，然后将数据获取结果提供给 UI 控制器。
+- 使用Data Binding来保持视图和 UI 控制器之间的接口干净。这样可以让视图更具声明性，并且尽可能减少在 Activity 和 Fragment 中编写更新代码。如果你喜欢在 Java 中执行该操作，请使用像Butter Knife 这样的库来避免使用样板代码并进行更好的抽象化。
+- 如果 UI 很复杂，可以考虑创建一个 Presenter 类来处理 UI 的修改。虽然通常这样做不是必要的，但可能会让 UI 更容易测试。
+- 不要在 ViewModel 中引用View或者 Activity的 context。因为如果ViewModel存活的比 Activity 时间长（在配置更改的情况下），Activity 将会被泄漏并且无法被正确的回收。
+
+
+
+
+
+
 
 
 ### 05.注解方法如何被调用
@@ -708,168 +761,6 @@
     ```
 
 
-### 06.addObserver调用分析
-- 看一下Lifecycle中addObserver方法，发现它是一个抽象方法，那么就去找它的实现类，这里先来看一下LifecycleRegistry类中的addObserver方法实现代码
-    ```
-    @Override
-    public void addObserver(@NonNull LifecycleObserver observer) {
-        State initialState = mState == DESTROYED ? DESTROYED : INITIALIZED;
-        //构造ObserverWithState
-        ObserverWithState statefulObserver = new ObserverWithState(observer, initialState);
-        //将observer对象和statefulObserver对象添加到FastSafeIterableMap数据结构中
-        ObserverWithState previous = mObserverMap.putIfAbsent(observer, statefulObserver);
-    
-        if (previous != null) {
-            return;
-        }
-        LifecycleOwner lifecycleOwner = mLifecycleOwner.get();
-        if (lifecycleOwner == null) {
-            // 它是null，我们应该被摧毁。快速回退
-            return;
-        }
-    
-        boolean isReentrance = mAddingObserverCounter != 0 || mHandlingEvent;
-        State targetState = calculateTargetState(observer);
-        mAddingObserverCounter++;
-        while ((statefulObserver.mState.compareTo(targetState) < 0
-                && mObserverMap.contains(observer))) {
-            pushParentState(statefulObserver.mState);
-            statefulObserver.dispatchEvent(lifecycleOwner, upEvent(statefulObserver.mState));
-            popParentState();
-            // mState / subling may have been changed recalculate
-            targetState = calculateTargetState(observer);
-        }
-    
-        if (!isReentrance) {
-            // we do sync only on the top level.
-            sync();
-        }
-        mAddingObserverCounter--;
-    }
-    ```
-- 然后看一下ObserverWithState类，追溯代码到Lifecycling.getCallback(observer)，看看里面做了什么
-    ```
-    static class ObserverWithState {
-        State mState;
-        GenericLifecycleObserver mLifecycleObserver;
-    
-        ObserverWithState(LifecycleObserver observer, State initialState) {
-            mLifecycleObserver = Lifecycling.getCallback(observer);
-            mState = initialState;
-        }
-    
-        void dispatchEvent(LifecycleOwner owner, Event event) {
-            State newState = getStateAfter(event);
-            mState = min(mState, newState);
-            mLifecycleObserver.onStateChanged(owner, event);
-            mState = newState;
-        }
-    }
-    ```
-- 接着来看看Lifecycling类中getCallback方法
-    - 判断该Observer是否是GenericLifecycleObserver，是的话返回本身；如果是FullLifecycleObserver，则直接创建一个FullLifecycleObserverAdapter对象
-    - 判断是否包含注解处理器 查找是否包含“类名__LifecycleAdapter”的类 包含并且有OnLifecycleEvent注解则返回SingleGeneratedAdapterObserver/CompositeGeneratedAdaptersObserver
-    - 如果以上提交都不满足就通过反射调用回调方法
-    ```
-    @NonNull
-    static GenericLifecycleObserver getCallback(Object object) {
-        if (object instanceof FullLifecycleObserver) {
-            return new FullLifecycleObserverAdapter((FullLifecycleObserver) object);
-        }
-    
-        if (object instanceof GenericLifecycleObserver) {
-            return (GenericLifecycleObserver) object;
-        }
-        
-        //获取传入对象object的Class对象
-        final Class<?> klass = object.getClass();
-        //获取类型是否包含注解处理器
-        int type = getObserverConstructorType(klass);
-        if (type == GENERATED_CALLBACK) {
-            ////这里是包含注解处理器 返回SingleGeneratedAdapterObserver 或者CompositeGeneratedAdaptersObserver
-            List<Constructor<? extends GeneratedAdapter>> constructors =
-                    sClassToAdapters.get(klass);
-            if (constructors.size() == 1) {
-                GeneratedAdapter generatedAdapter = createGeneratedAdapter(
-                        constructors.get(0), object);
-                return new SingleGeneratedAdapterObserver(generatedAdapter);
-            }
-            GeneratedAdapter[] adapters = new GeneratedAdapter[constructors.size()];
-            for (int i = 0; i < constructors.size(); i++) {
-                adapters[i] = createGeneratedAdapter(constructors.get(i), object);
-            }
-            return new CompositeGeneratedAdaptersObserver(adapters);
-        }
-        ///通过反射调用方法
-        return new ReflectiveGenericLifecycleObserver(object);
-    }
-    ```
-- 然后查看一下SingleGeneratedAdapterObserver类
-    - 通过ObserverWithState#dispatchEvent方法最后调用的实际是SingleGeneratedAdapterObserver里面的onStateChanged方法
-    - 在SingleGeneratedAdapterObserver里面调用了Adapter的callMethods方法 
-    - 这个是
-    ```
-    @RestrictTo(RestrictTo.Scope.LIBRARY_GROUP)
-    public class SingleGeneratedAdapterObserver implements GenericLifecycleObserver {
-    
-        private final GeneratedAdapter mGeneratedAdapter;
-    
-        SingleGeneratedAdapterObserver(GeneratedAdapter generatedAdapter) {
-            mGeneratedAdapter = generatedAdapter;
-        }
-    
-        @Override
-        public void onStateChanged(LifecycleOwner source, Lifecycle.Event event) {
-            mGeneratedAdapter.callMethods(source, event, false, null);
-            mGeneratedAdapter.callMethods(source, event, true, null);
-        }
-    }
-    ```
-- 然后看一下CompositeGeneratedAdaptersObserver类
-    - 通过ObserverWithState#dispatchEvent方法最后调用的实际是CompositeGeneratedAdaptersObserver里面的onStateChanged方法
-    - 在CompositeGeneratedAdaptersObserver里面遍历mGeneratedAdapters，然后也是调用callMethods方法
-    ```
-    @RestrictTo(RestrictTo.Scope.LIBRARY_GROUP)
-    public class CompositeGeneratedAdaptersObserver implements GenericLifecycleObserver {
-    
-        private final GeneratedAdapter[] mGeneratedAdapters;
-    
-        CompositeGeneratedAdaptersObserver(GeneratedAdapter[] generatedAdapters) {
-            mGeneratedAdapters = generatedAdapters;
-        }
-    
-        @Override
-        public void onStateChanged(LifecycleOwner source, Lifecycle.Event event) {
-            MethodCallsLogger logger = new MethodCallsLogger();
-            for (GeneratedAdapter mGenerated: mGeneratedAdapters) {
-                mGenerated.callMethods(source, event, false, logger);
-            }
-            for (GeneratedAdapter mGenerated: mGeneratedAdapters) {
-                mGenerated.callMethods(source, event, true, logger);
-            }
-        }
-    }
-    ```
-- 最后看一下ReflectiveGenericLifecycleObserver类的代码
-    - 反射调用回调函数，不过这里听过class对象，从ClassesInfoCache获取info信息。先从map里拿，拿不到通过createInfo函数扫描类里面的方法。具体分析可以看源码……
-    ```
-    class ReflectiveGenericLifecycleObserver implements GenericLifecycleObserver {
-        private final Object mWrapped;
-        private final CallbackInfo mInfo;
-    
-        ReflectiveGenericLifecycleObserver(Object wrapped) {
-            mWrapped = wrapped;
-            mInfo = ClassesInfoCache.sInstance.getInfo(mWrapped.getClass());
-        }
-    
-        @Override
-        public void onStateChanged(LifecycleOwner source, Event event) {
-            mInfo.invokeCallbacks(source, event, mWrapped);
-        }
-    }
-    ```
-- 当addObserver的时候最后实际传入的是一个包装好的ObserverWithState对象 然后调用onStateChanged方法来分发状态。使用处理器来提高性能，避免反射造成的性能消耗。
-
 
 ### 07.知识点梳理和总结一下
 - Lifecycle 库通过在 SupportActivity 的 onCreate 中注入 ReportFragment 来感知发生命周期；
@@ -879,21 +770,6 @@
 - ObserverWithState ，是 Observer 的一个封装类，是它最终 通过 ReflectiveGenericLifecycleObserve 调用了我们用注解修饰的方法；
 - LifecycleObserver ，Lifecycle 的观察者，利用它我们可以享受 Lifecycle 带来的能力；
 - ReflectiveGenericLifecycleObserver，它存储了我们在 Observer 里注解的方法，并在生命周期发生改变的时候最终通过反射的方式调用对应的方法。
-
-
-
-### 参考博客
-- https://developer.android.com/topic/libraries/architecture/lifecycle
-- https://www.jianshu.com/p/7087f1dae359
-- https://mp.weixin.qq.com/s/P22w7K0vS5s0A9M4HkBgzQ
-- https://mp.weixin.qq.com/s/xxYoyLXIIr8zHMz9BbpnAg
-
-
-
-
-### 开源LiveData事件总线：https://github.com/yangchong211/YCLiveDataBus
-
-
 
 
 
