--- a/Read/ReadShareWiki/03.建立体系/02.体系思维很重要.md
+++ b/Read/ReadShareWiki/03.建立体系/02.体系思维很重要.md
@@ -1,5 +1,31 @@
+#### 目录介绍
+- 01.体系思维的背景
+- 02.点性思维较凌乱
+- 03.线性思维视野宽
+- 04.面性思维成框架
+- 05.体性思维附加值
+- 06.点线面体的思维
 
 
+
+### 01.体系思维的背景
+- 在工作的经历中就曾碰到过这么一个人，他一开始做了几年开发，从前端到后端，后来又转做测试，接触的“点”倒是不少，但却没能连接起来形成自己的体系，那他个人最大的价值就局限在最后所在的“点”上了。
+- 其实个人的成长有很多方面，但对于个人的成长最重要的就是知识体系的构建，这其实就是一个 “点线面体” 的演进过程。
+
+
+### 02.点性思维较凌乱
+- 进入任何一个知识领域，都是从一个点开始的。大学进入软件开发领域所接触的一系列的点，我将其从左到右按时间顺序排列。红色的部分是目前还属于我 “掌握” 与 “了解” 的领域，其他灰色的部分则是要么被时代淘汰了，要么已经被我放弃了维持与更新。
+- 每一个技术点，似乎都是自己选择的，但又感觉只是一种被趋势推动的一次次无意“捡起”。有些点之间有先后的承接关系，而更多点都慢慢变成了孤点，从这片技术的星空中暗淡了下去。
+- 在你入行后，我想你可能也会因为时代、公司或项目的原因，有很大的随机性去接触很多不同的技术点。但如果你总是这样被客观的原因驱动去随机点亮不同的 “点”，那么你终究会感到有点疲于奔命，永远追不上技术的浪潮。
+
+
+### 03.线性思维视野宽
+- 当形成的点足够多了后，一部分点开始形成线，而另一些点则在技术趋势的演进中被自然淘汰或自己主动战略放弃。那你到底该如何把这些零散的点串成线，形成自己的体系与方向呢？
+- 一个个点，构成了基本的价值点，这些点串起来，就形成了更大的价值输出链条。在这条路上，你也会有一条属于自己的 “T 线”，当这条线成型后，你的价值也将变得更大。
+
+
+### 04.面性思维成框架
+- 线的交织，将形成面。
 
 
 
